--- a/style.css
+++ b/style.css
@@ -11,12 +11,117 @@ html {
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
+  background-color: hsl(0, 100%, 74%);
+  background-image: url("./images/bg-intro-mobile.png");
+  background-size: cover;
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.attribution {
+.intro {
+  /* background-image: url("./images/bg-intro-mobile.png");
+  background-size: cover; */
+  color: white;
+  margin-top: 2.5em;
+}
+
+.intro-title {
+  font-size: 1.75rem;
+  padding-top: 1.5em;
+  margin: 0;
+}
+
+.intro-body {
+  line-height: 1.7;
+  max-width: 325px;
+  margin: 1em auto;
+}
+
+.btn,
+.terms-link {
+  text-decoration: none;
+}
+
+.btn-container {
+  display: inline-block;
+  margin-top: 2em;
+  background-color: hsl(248, 32%, 49%);
+  padding: 1em 0;
+  border-radius: 10px;
+  margin-bottom: 2em;
+  box-shadow: 0 8px rgba(0, 0, 0, 0.178);
+}
+
+.btn-text {
+  width: 60%;
+  margin: auto;
+  font-size: 0.9375rem;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.form-section {
+  background-color: white;
+  border-radius: 10px;
+  padding: 1em 0;
+  margin-bottom: 2em;
+}
+
+input {
+  padding: 1.5em;
+  margin-bottom: 1em;
+  border-radius: 5px;
+  border: 1px solid hsla(246, 25%, 77%, 0.534);
+}
+
+input[placeholder] {
+  font-size: 0.875rem;
+  font-weight: 600;
+}
+
+.btn,
+.submit-btn {
+  color: white;
+}
+
+input,
+.submit-btn,
+.terms {
+  width: 90%;
+}
+
+.submit-btn {
+  border: none;
+  border-radius: 5px;
+  background-color: #38cc8b;
+  font-size: 0.9375rem;
+  font-weight: 600;
+  padding: 1.25em 0;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
+
+.terms {
+  margin: 1em auto;
+  font-size: 0.6875rem;
+  color: hsl(246, 25%, 77%);
+  width: 75%;
+}
+
+.pink {
+  color: hsl(0, 100%, 74%);
+}
+
+.attribution,
+.attribution a {
   font-size: 11px;
   text-align: center;
+  color: white;
 }
+
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.555);
 }
