--- a/style.css
+++ b/style.css
@@ -9,21 +9,18 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: "Poppins", sans-serif;
   background-color: hsl(0, 100%, 74%);
   background-image: url("./images/bg-intro-mobile.png");
   background-size: cover;
   text-align: center;
   width: 90%;
-  margin: 0 auto;
 }
 
 .intro {
-  /* background-image: url("./images/bg-intro-mobile.png");
-  background-size: cover; */
   color: white;
-  margin-top: 2.5em;
+  margin-top: 1em;
 }
 
 .intro-title {
@@ -67,7 +64,7 @@ body {
   background-color: white;
   border-radius: 10px;
   padding: 1em 0;
-  margin-bottom: 2em;
+  margin-bottom: 0;
 }
 
 input {
