--- a/style.css
+++ b/style.css
@@ -66,12 +66,13 @@ body {
   font-weight: 700;
 }
 
-.form-section {
+form {
   background-color: white;
   border-radius: 10px;
   padding: 1em 0;
-  margin-bottom: 0;
   box-shadow: 0 8px rgba(0, 0, 0, 0.178);
+  max-width: 337px;
+  margin: 0 auto;
 }
 
 input {
@@ -84,6 +85,10 @@ input {
 input[placeholder] {
   font-size: 0.875rem;
   font-weight: 600;
+}
+
+input:user-invalid {
+  border: 2px solid hsl(0, 100%, 74%);
 }
 
 .btn,
@@ -129,4 +134,50 @@ input,
 
 .attribution a {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.555);
+}
+
+@media (min-width: 750px) {
+  body {
+    background-image: url("./images/bg-intro-desktop.png");
+    text-align: left;
+  }
+
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4em;
+    margin-top: 8em;
+  }
+
+  .intro-title {
+    font-size: 3.125rem;
+    max-width: 500px;
+  }
+
+  .intro-body {
+    max-width: 500px;
+  }
+
+  .form-section {
+    text-align: center;
+  }
+
+  .btn-container {
+    width: 100%;
+    padding: 1.25em 0;
+  }
+
+  .btn-text {
+    width: initial;
+  }
+
+  form {
+    max-width: 540px;
+    padding: 2.5em 0;
+  }
+
+  footer {
+    margin-top: 2em;
+  }
 }
